deploy/k8s/base/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app.kubernetes.io/name: nats
  ports:
    - name: client
      port: 4222
      targetPort: nats
    - name: monitor
      port: 8222
      targetPort: monitor
